k8s/base/networkpolicy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: kairos
spec:
  podSelector: {} # Selects all pods in the namespace
  policyTypes:
    - Ingress
  ingress:
    # We still want to allow metrics scraping from Prometheus across the cluster
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 8000
    # Allow DNS
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
